# channel3D_parallel

./: .editorconfig  .gitignore  404.html  CMakeLists.txt  README.md  exp_shell.sh  index.html  mkdocs.yml  test_script.sh
.github/workflows/: CI.yml  docs.yml
app/: main.f90
developer-guide/: index.html
developer-guide/E_and_R/: index.html
developer-guide/global_local_index/: index.html
developer-guide/support_cell_index/: index.html
docs/: .pages  developer_guide.md  ford_project.md  index.md  installation.md
docs/developer-guide/: .pages  E_and_R.md  index.md  support_cell_index.md
docs/developer_guide/: global_local_index.md
docs/user-guide/: .pages  body-types.md  grid-types.md  index.md  input-parameters.md  model-and-equations.md  post-processing.md  running-simulations.md
examples/: fort.35  input_parameters  input_parameters_ib_double_rotating_cylinders  input_parameters_ib_mfu  input_parameters_ib_planar_wall  input_parameters_ib_standing_wave  input_parameters_non_ib  jobscript.slurm  jobscript_ib_double_rotating_cylinders.slurm  jobscript_ib_mfu.slurm  jobscript_ib_planar_wall.slurm  jobscript_ib_standing_wave.slurm  jobscript_non_ib.slurm
examples/channel_output_ib_double_rotating_cylinders/: test.1.stats.txt
examples/channel_output_ib_double_rotating_cylinders_nx34/: test.2800
installation/: index.html
search/: search_index.json
src/: CMakeLists.txt  boundary_conditions.f90  differential_operators.f90  equations.f90  global.f90  heaviside.f90  immersed_boundary_geometry.f90  immersed_boundary_operators.f90  immersed_boundary_stages.f90  initialization.f90  input_output.f90  interpolation.f90  mass_flow.f90  monitor.f90  poisson.f90  pressure.f90  projection.f90  statistics.f90  time_integration.f90
tools/: Shell_parallel_ctrl_exp_local_slurm.sh  file_io.py  plot.ipynb  read_field.py
tools/.ipynb_checkpoints/: file_io-checkpoint.py
uild/: CMakeCache.txt
user-guide/: index.html
user-guide/body-types/: index.html
user-guide/grid-types/: index.html
user-guide/input-parameters/: index.html
user-guide/model-and-equations/: index.html
user-guide/post-processing/: index.html
user-guide/running-simulations/: index.html
